--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,6 +10,7 @@
     用户名:<input name="name" type="text"/><br>
     密码:<input name="pass" type="password"> <br>
     <input type="submit" value="登录">
+    <a href="http://localhost:8080/regist.html">没有账号？注册一个</a>
 </form>
 </body>
 
